# kafka-producer

./: .gitignore  README.md  pyproject.toml
kafka_producer_py/: __init__.py  main.py  producer_purchases.py  purchase.py  topic.py
