[tool.poetry]
name = "kafka-producer-py"
version = "0.1.0"
description = ""
authors = ["Andre Sousa <andresousa@google.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^13.14.0"
confluent-kafka = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
producer = "kafka_producer_py:start"